--- a/hello.html
+++ b/hello.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+  	<title>Bruno Mars</title>
       <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
+  	<h1 id=coolest> Bruno Mars </h1>
+  	<h2 class=cool> Lets learn about Bruno!</h2>
+  	<p> Bruno is a singer!</p>
+  	<img src="bruno.jpeg" alt="bruno"> 
+  	<a href="https://en.wikipedia.org/wiki/Bruno_Mars">TO learn more about Bronu go here!</a>
   </body>
 </html>
